쿼리셀렉터 추가

--- a/navi.html
+++ b/navi.html
@@ -28,9 +28,9 @@
                     ]
 
                 document.querySelector("#gnb").innerHTML = `
-                                            <li>${nav_date[0].gnb_li_a}
-                                            <li>${nav_date[1].gnb_li_a}
-                                            <li>${nav_date[2].gnb_li_a}
+                <li><a href="${nav_data[0].gnb_li_href}">${nav_data[0].gnb_li_a}</a></li>
+                <li><a href="${nav_data[1].gnb_li_href}">${nav_data[1].gnb_li_a}</a></li>
+                <li><a href="${nav_data[2].gnb_li_href}">${nav_data[2].gnb_li_a}</a></li>
                                             `;
     </script>
 </body>
